--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,27 @@
             android:layout_margin="5dp"
             />
 
-        <Button
-            android:id="@+id/enterButton"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Enter"
-            android:layout_margin="5dp"
-            />
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/enterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enter"
+                android:layout_margin="5dp"
+                />
+
+            <Button
+                android:id="@+id/deleteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete Selected"
+                android:layout_margin="5dp"/>
+        </LinearLayout>
+
+
 
 
         <ScrollView
@@ -36,8 +50,12 @@
             <LinearLayout
                 android:id="@+id/containerLinLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+
+
+
 
 
 
