--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,13 @@
                 android:layout_height="wrap_content"
                 android:text="Delete Selected"
                 android:layout_margin="5dp"/>
+
+            <Button
+                android:id="@+id/testButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Test"
+                android:layout_margin="5dp"/>
         </LinearLayout>
 
 
